# oneAPI-samples

AI-and-Analytics/Getting-Started-Samples/INC-Quantization-Sample-for-PyTorch/nc_workspace/2025-03-01_22-10-20/: history.snapshot
AI-and-Analytics/Getting-Started-Samples/INC-Quantization-Sample-for-PyTorch/nc_workspace/2025-03-01_22-13-48/: history.snapshot
AI-and-Analytics/Getting-Started-Samples/INC-Quantization-Sample-for-PyTorch/nc_workspace/2025-03-07_16-56-38/: deploy.yaml  history.snapshot
DirectProgramming/C++SYCL/DenseLinearAlgebra/vector-add/: README.md
DirectProgramming/C++SYCL/DpcppBundleAdjustment/: CMakeLists.txt  README.md  sample.json
DirectProgramming/C++SYCL/DpcppBundleAdjustment/include/: device_matrix.h  dpcpp_block_solver.h  dpcpp_bundle_adjustment.h
DirectProgramming/C++SYCL/dpcpp-bundle-adjustment/: README.md
DirectProgramming/C++SYCL/dpcpp-bundle-adjustment/include/: dpcpp_linear_solver.h  macro.h  sparse_block_matrix.h
DirectProgramming/C++SYCL/dpcpp-bundle-adjustment/samples/sample_ba_from_file/: CMakeLists.txt  main.cpp
DirectProgramming/C++SYCL/dpcpp-bundle-adjustment/src/: CMakeLists.txt  dpcpp_block_solver.dp.cpp  dpcpp_bundle_adjustment.cpp  dpcpp_linear_solver.dp.cpp  sparse_block_matrix.cpp
